--- a/LibraryManagement.Services.Core/LibraryManagement.Services.Core.csproj
+++ b/LibraryManagement.Services.Core/LibraryManagement.Services.Core.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\LibraryManagement.Data.Models\LibraryManagement.Data.Models.csproj" />
     <ProjectReference Include="..\LibraryManagement.Data\LibraryManagement.Data.csproj" />
     <ProjectReference Include="..\LibraryManagement.GCommon\LibraryManagement.GCommon.csproj" />
