Moved admin controller and views to their own separate area, mapped appropriate route in program.cs

--- a/LibraryManagement.Web/LibraryManagement.Web.csproj
+++ b/LibraryManagement.Web/LibraryManagement.Web.csproj
@@ -26,4 +26,8 @@
     <ProjectReference Include="..\LibraryManagement.Web.ViewModels\LibraryManagement.Web.ViewModels.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Areas\Admin\Models\" />
+  </ItemGroup>
+
 </Project>
